fixing front-end start problemas, and fixing some bugs in back-end